--- a/HTML CSS/micro-components/FixedSidebar/FixedSidebar.html
+++ b/HTML CSS/micro-components/FixedSidebar/FixedSidebar.html
@@ -3,82 +3,70 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fixed Sidebar</title>
-    <link rel="stylesheet" type="text/css" style="text/css" href="style.css" />
+    <title>fixed side bar</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="sidebar">
-      <aside class="fixed-sidebar">
-        <section><a href="#">home</a><br /></section>
-        <section><a href="#">about</a><br /></section>
-        <section><a href="#">terms</a><br /></section>
-        <section><a href="#">privacy</a><br /></section>
-        <section><a href="#">email</a><br /></section>
-      </aside>
-    </div>
-    <div>
-      <section id="main">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ab
-        dolor, omnis odio fugit architecto illo? Soluta velit, ea expedita a
-        necessitatibus facere alias in, architecto, reprehenderit asperiores
-        beatae odit. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Quibusdam ab dolor, omnis odio fugit architecto illo? Soluta velit, ea
-        expedita a necessitatibus facere alias in, architecto, reprehenderit
-        asperiores beatae odit.Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Quibusdam ab dolor, omnis odio fugit architecto illo?
-        Soluta velit, ea expedita a necessitatibus facere alias in, architecto,
-        reprehenderit asperiores beatae odit.Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Quibusdam ab dolor, omnis odio fugit
-        architecto illo? Soluta velit, ea expedita a necessitatibus facere alias
-        in, architecto, reprehenderit asperiores beatae odit.Lorem ipsum dolor
-        sit amet consectetur adipisicing elit. Quibusdam ab dolor, omnis odio
-        fugit architecto illo? Soluta velit, ea expedita a necessitatibus facere
-        alias in, architecto, reprehenderit asperiores beatae odit.Lorem ipsum
-        dolor sit amet consectetur adipisicing elit. Quibusdam ab dolor, omnis
-        odio fugit architecto illo? Soluta velit, ea expedita a necessitatibus
-        facere alias in, architecto, reprehenderit asperiores beatae odit.Lorem
-        ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ab dolor,
-        omnis odio fugit architecto illo? Soluta velit, ea expedita a
-        necessitatibus facere alias in, architecto, reprehenderit asperiores
-        beatae odit.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Quibusdam ab dolor, omnis odio fugit architecto illo? Soluta velit, ea
-        expedita a necessitatibus facere alias in, architecto, reprehenderit
-        asperiores beatae odit.Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Quibusdam ab dolor, omnis odio fugit architecto illo?
-        Soluta velit, ea expedita a necessitatibus facere alias in, architecto,
-        reprehenderit asperiores beatae odit.Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Quibusdam ab dolor, omnis odio fugit
-        architecto illo? Soluta velit, ea expedita a necessitatibus facere alias
-        in, architecto, reprehenderit asperiores beatae odit. Lorem ipsum dolor
-        sit amet consectetur adipisicing elit. Illum fuga eum modi odio officiis
-        architecto nemo unde esse, omnis et ullam nulla ea laborum provident
-        voluptates molestias sunt doloribus dolore! Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Nulla debitis enim officia cupiditate
-        distinctio, illo dolorum aperiam a maxime quas ipsum necessitatibus nisi
-        beatae, blanditiis obcaecati quibusdam similique est maiores. Lorem
-        ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ducimus
-        ea inventore repellendus modi, possimus vitae, praesentium fugiat
-        tempora, natus dolores non magnam? Sunt aliquid velit quaerat? Adipisci
-        quaerat consequatur dolor nobis blanditiis repudiandae, vel unde nulla
-        voluptatibus quam magni in dolorem inventore accusantium iure maxime.
-        Corporis tempora voluptatibus, fugit optio dignissimos perspiciatis
-        ipsam error. Porro esse cum, similique neque eligendi voluptatem dicta
-        quibusdam laudantium facere cupiditate illum optio non molestiae labore
-        fugiat, deleniti sunt quod, explicabo amet velit corporis quae
-        voluptatum autem necessitatibus. Repellendus qui corporis doloribus iure
-        alias, explicabo suscipit. Iure est molestias laudantium sed laboriosam
-        facere eius voluptatum, illo error at ab, vero animi saepe architecto
-        corrupti. Nostrum, vitae odio asperiores placeat vero minus fugit.
-        Ducimus voluptatibus ea dolorum quisquam ex, sint perferendis
-        exercitationem totam explicabo corrupti ipsum voluptas. Laborum rem,
-        quod cupiditate assumenda maiores facere est officiis, rerum vero id at
-        tempora eius, earum omnis. Quam aperiam laboriosam nemo facere nisi
-        earum veniam ratione ipsa non cum sit, consectetur debitis eius ex
-        maiores quas! Quod recusandae vel voluptates ratione harum eum
-        voluptatum nam, veritatis architecto illum facere magni labore saepe
-        earum neque sapiente sunt dolorum minus delectus aliquid porro velit!
-        Maxime, eligendi? Ullam, expedita. Veritatis, eos!
-      </section>
-    </div>
+    <aside>
+      <a href="#">home</a><br />
+      <a href="#">about</a><br />
+      <a href="#">terms</a><br />
+      <a href="#">privacy</a><br />
+      <a href="#">email</a>
+    </aside>
+    <section id="main">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni expedita
+      fuga quam non quisquam ipsa tempore cum, nam harum commodi optio rem
+      voluptatem repellat, adipisci ab. Inventore eum doloribus sit non id
+      accusantium adipisci velit, unde, dolorem fuga aut animi atque quis vero,
+      aliquid praesentium? Hic veritatis doloremque magni! Numquam eius dolorum
+      et maxime exercitationem. Esse dignissimos deserunt ipsa tempora debitis
+      eligendi delectus aspernatur rem assumenda aperiam, fuga quos sed
+      quibusdam neque voluptate quod, ratione eius dolores accusantium,
+      voluptatem commodi quas. Tempore adipisci nobis ipsam in consectetur
+      assumenda, totam sapiente corrupti esse soluta explicabo necessitatibus
+      ullam dignissimos voluptatem. Molestiae, numquam. Excepturi dolorem fugiat
+      itaque tempora qui incidunt, aperiam fugit quae quasi ratione ipsa quod in
+      eos ex nihil doloremque corporis rem quis hic at! Tempora, autem. Ullam
+      dignissimos aut consequuntur numquam nostrum voluptas doloribus adipisci
+      soluta provident saepe quae, eveniet dicta quisquam nisi ad nobis quaerat
+      atque nihil at quo vel! Repudiandae, animi? Excepturi labore voluptates
+      debitis sit molestiae ut, nam, quod voluptate tempore blanditiis provident
+      rerum autem cum fugiat sapiente eligendi velit corporis. Molestias eos
+      amet non vel sapiente fugiat officia? Voluptatibus, blanditiis assumenda
+      perspiciatis eos ex impedit eaque illo mollitia pariatur debitis tempore
+      unde possimus fugit voluptate nam doloribus esse praesentium officia
+      repellat velit obcaecati sequi laboriosam voluptatem. Sit ducimus
+      quibusdam odio mollitia quos consectetur nam ipsum animi quaerat natus
+      adipisci, molestias nesciunt? Nisi perferendis dolorem accusamus possimus
+      repudiandae fugiat quaerat asperiores commodi illum, beatae repellendus,
+      cumque voluptas unde quam mollitia suscipit laboriosam praesentium, eaque
+      rem! Dolor, obcaecati ex nulla eligendi explicabo optio molestiae dolorem
+      consectetur aperiam itaque eveniet voluptates perferendis ea sunt beatae,
+      magni quod tempore facere vero. Explicabo blanditiis natus accusantium, ex
+      impedit perferendis repellendus quam aliquam fuga, fugit, voluptatum
+      distinctio sunt quia earum? Temporibus, quod in voluptas hic maiores totam
+      quidem explicabo blanditiis adipisci rerum est quos, aliquam aut ad omnis
+      velit similique excepturi ea? Provident fugit minima ab animi, voluptatum
+      quis nam deserunt repellat vel distinctio veritatis, accusamus sequi.
+      Libero, saepe, nemo soluta aperiam amet facere quisquam, ea inventore
+      consequuntur distinctio quis ipsum cum qui ex quas accusamus officia? Sit
+      qui quibusdam consectetur consequuntur atque obcaecati eius dolor omnis
+      accusantium, repudiandae velit? Optio eveniet deleniti culpa magnam. Et
+      sit voluptates voluptatum impedit tenetur dicta sint est, hic maiores
+      eligendi recusandae incidunt eveniet, commodi nobis id aut accusantium sed
+      inventore officia. Ad repellendus error quasi inventore architecto eaque
+      quos fugiat culpa nobis reprehenderit ea, magni dolorem suscipit eos
+      repudiandae, deleniti nemo vero ullam temporibus impedit? Dolor sint atque
+      quaerat ratione! Similique impedit totam delectus magni eveniet quam unde
+      ullam eligendi et aliquid? Dignissimos, omnis. Nihil pariatur a fugiat
+      quibusdam temporibus ab fuga non voluptatum architecto praesentium
+      dignissimos veritatis, natus dicta repellat odit quas! Praesentium aut
+      explicabo ipsam vel quaerat voluptates quos omnis culpa excepturi facere
+      suscipit odit, sint blanditiis modi fuga vitae qui, molestias ab nemo.
+      Perferendis, quia natus, ex vero eveniet enim excepturi unde in ad
+      accusamus sed autem cum optio itaque, dicta minus debitis earum omnis
+      porro quaerat repellendus? Neque laboriosam repudiandae quaerat?
+    </section>
   </body>
 </html>
