--- a/HTML CSS/Tribute-Page/index.html
+++ b/HTML CSS/Tribute-Page/index.html
@@ -7,9 +7,62 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Pizza</h1>
-    <h2>since early 19th century</h2>
-    <h3>one of the greatest foods to ever grace this planet</h3>
-    <section><img src="pizza.jpg" alt="pizza portrait" /></section>
+    <h1 class="centered-content">Pizza</h1>
+    <h2 class="centered-content">since early 19th century</h2>
+    <h3 class="centered-content">
+      one of the greatest foods to ever grace this planet
+    </h3>
+    <section class="center">
+      Pizza (Italian: 'pittsa', Neapolitan: 'pittsə') is a savory dish of
+      Italian origin consisting of a usually round, flattened base of leavened
+      wheat-based dough topped with tomatoes, cheese, and often various other
+      ingredients (such as anchovies, mushrooms, onions, olives, etc.), which is
+      then baked at a high temperature, traditionally in a wood-fired oven.
+    </section>
+    <section class="centered-content">
+      <img src="pizza.jpg" alt="pizza portrait" height="500px" width="500px" />
+    </section>
+    <section class="center">
+      <h4>History</h4>
+      Foods similar to pizza have been made since the Neolithic Age.[18] Records
+      of people adding other ingredients to bread to make it more flavorful can
+      be found throughout ancient history. In the 6th century BC, the Persian
+      soldiers of Achaemenid Empire during the rule King Darius I baked
+      flatbreads with cheese and dates on top of their battle shields[19][20]
+      and the ancient Greeks supplemented their bread with oils, herbs, and
+      cheese.[21][22] An early reference to a pizza-like food occurs in the
+      Aeneid, when Celaeno, queen of the Harpies, foretells that the Trojans
+      would not find peace until they are forced by hunger to eat their tables
+      (Book III). In Book VII, Aeneas and his men are served a meal that
+      includes round cakes (like pita bread) topped with cooked vegetables. When
+      they eat the bread, they realize that these are the "tables" prophesied by
+      Celaeno.[23] Modern pizza evolved from similar flatbread dishes in Naples,
+      Italy, in the 18th or early 19th century.[24] Prior to that time,
+      flatbread was often topped with ingredients such as garlic, salt, lard,
+      and cheese. It is uncertain when tomatoes were first added and there are
+      many conflicting claims.[24] Until about 1830, pizza was sold from
+      open-air stands and out of pizza bakeries. A popular contemporary legend
+      holds that the archetypal pizza, pizza Margherita, was invented in 1889,
+      when the Royal Palace of Capodimonte commissioned the Neapolitan pizzaiolo
+      (pizza maker) Raffaele Esposito to create a pizza in honor of the visiting
+      Queen Margherita. Of the three different pizzas he created, the Queen
+      strongly preferred a pizza swathed in the colors of the Italian flag — red
+      (tomato), green (basil), and white (mozzarella). Supposedly, this kind of
+      pizza was then named after the Queen,[25] although later research cast
+      doubt on this legend.[26] An official letter of recognition from the
+      Queen's "head of service" remains on display in Esposito's shop, now
+      called the Pizzeria Brandi.[27] Pizza was brought to the United States
+      with Italian immigrants in the late nineteenth century[28] and first
+      appeared in areas where Italian immigrants concentrated. The country's
+      first pizzeria, Lombardi's, opened in 1905.[29] Following World War II,
+      veterans returning from the Italian Campaign, who were introduced to
+      Italy's native cuisine, proved a ready market for pizza in particular.[30]
+      <i
+        ><p>
+          Read more about Pizza on
+          <a href="https://en.wikipedia.org/wiki/Pizza">Wikipedia</a>.
+        </p></i
+      >
+    </section>
   </body>
 </html>
