--- a/HTML CSS/micro-components/FixedSidebar/FixedSidebar.html
+++ b/HTML CSS/micro-components/FixedSidebar/FixedSidebar.html
@@ -3,70 +3,71 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fixed side bar</title>
+    <title>Fixed Side Bar</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <aside>
+    <aside id="menu">
       <a href="#">home</a><br />
       <a href="#">about</a><br />
+      <a href="#">contact</a><br />
       <a href="#">terms</a><br />
-      <a href="#">privacy</a><br />
-      <a href="#">email</a>
+      <a href="#">license</a>
     </aside>
     <section id="main">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni expedita
-      fuga quam non quisquam ipsa tempore cum, nam harum commodi optio rem
-      voluptatem repellat, adipisci ab. Inventore eum doloribus sit non id
-      accusantium adipisci velit, unde, dolorem fuga aut animi atque quis vero,
-      aliquid praesentium? Hic veritatis doloremque magni! Numquam eius dolorum
-      et maxime exercitationem. Esse dignissimos deserunt ipsa tempora debitis
-      eligendi delectus aspernatur rem assumenda aperiam, fuga quos sed
-      quibusdam neque voluptate quod, ratione eius dolores accusantium,
-      voluptatem commodi quas. Tempore adipisci nobis ipsam in consectetur
-      assumenda, totam sapiente corrupti esse soluta explicabo necessitatibus
-      ullam dignissimos voluptatem. Molestiae, numquam. Excepturi dolorem fugiat
-      itaque tempora qui incidunt, aperiam fugit quae quasi ratione ipsa quod in
-      eos ex nihil doloremque corporis rem quis hic at! Tempora, autem. Ullam
-      dignissimos aut consequuntur numquam nostrum voluptas doloribus adipisci
-      soluta provident saepe quae, eveniet dicta quisquam nisi ad nobis quaerat
-      atque nihil at quo vel! Repudiandae, animi? Excepturi labore voluptates
-      debitis sit molestiae ut, nam, quod voluptate tempore blanditiis provident
-      rerum autem cum fugiat sapiente eligendi velit corporis. Molestias eos
-      amet non vel sapiente fugiat officia? Voluptatibus, blanditiis assumenda
-      perspiciatis eos ex impedit eaque illo mollitia pariatur debitis tempore
-      unde possimus fugit voluptate nam doloribus esse praesentium officia
-      repellat velit obcaecati sequi laboriosam voluptatem. Sit ducimus
-      quibusdam odio mollitia quos consectetur nam ipsum animi quaerat natus
-      adipisci, molestias nesciunt? Nisi perferendis dolorem accusamus possimus
-      repudiandae fugiat quaerat asperiores commodi illum, beatae repellendus,
-      cumque voluptas unde quam mollitia suscipit laboriosam praesentium, eaque
-      rem! Dolor, obcaecati ex nulla eligendi explicabo optio molestiae dolorem
-      consectetur aperiam itaque eveniet voluptates perferendis ea sunt beatae,
-      magni quod tempore facere vero. Explicabo blanditiis natus accusantium, ex
-      impedit perferendis repellendus quam aliquam fuga, fugit, voluptatum
-      distinctio sunt quia earum? Temporibus, quod in voluptas hic maiores totam
-      quidem explicabo blanditiis adipisci rerum est quos, aliquam aut ad omnis
-      velit similique excepturi ea? Provident fugit minima ab animi, voluptatum
-      quis nam deserunt repellat vel distinctio veritatis, accusamus sequi.
-      Libero, saepe, nemo soluta aperiam amet facere quisquam, ea inventore
-      consequuntur distinctio quis ipsum cum qui ex quas accusamus officia? Sit
-      qui quibusdam consectetur consequuntur atque obcaecati eius dolor omnis
-      accusantium, repudiandae velit? Optio eveniet deleniti culpa magnam. Et
-      sit voluptates voluptatum impedit tenetur dicta sint est, hic maiores
-      eligendi recusandae incidunt eveniet, commodi nobis id aut accusantium sed
-      inventore officia. Ad repellendus error quasi inventore architecto eaque
-      quos fugiat culpa nobis reprehenderit ea, magni dolorem suscipit eos
-      repudiandae, deleniti nemo vero ullam temporibus impedit? Dolor sint atque
-      quaerat ratione! Similique impedit totam delectus magni eveniet quam unde
-      ullam eligendi et aliquid? Dignissimos, omnis. Nihil pariatur a fugiat
-      quibusdam temporibus ab fuga non voluptatum architecto praesentium
-      dignissimos veritatis, natus dicta repellat odit quas! Praesentium aut
-      explicabo ipsam vel quaerat voluptates quos omnis culpa excepturi facere
-      suscipit odit, sint blanditiis modi fuga vitae qui, molestias ab nemo.
-      Perferendis, quia natus, ex vero eveniet enim excepturi unde in ad
-      accusamus sed autem cum optio itaque, dicta minus debitis earum omnis
-      porro quaerat repellendus? Neque laboriosam repudiandae quaerat?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto atque a
+      iste repellat, tempora eius, praesentium necessitatibus nemo quis
+      temporibus fuga itaque magni? Porro ad iste recusandae iusto velit aliquid
+      maxime possimus molestiae mollitia vero, sed dicta hic temporibus nisi
+      quia explicabo. Itaque quam beatae enim tenetur, quia maiores quisquam
+      cumque repudiandae vitae aspernatur illum blanditiis adipisci molestias
+      facilis illo nihil, architecto non quaerat. Officiis veritatis iusto quae
+      neque molestias accusantium nulla eligendi ipsum tempora, quod dicta
+      nesciunt ipsa nisi maxime, ratione debitis velit amet repellat distinctio
+      corporis magni vitae sequi at? Labore ad, repellendus explicabo, debitis
+      temporibus quas enim numquam possimus officiis perspiciatis vero fugiat
+      minima eum dicta? Explicabo fuga aspernatur sequi itaque fugit nostrum,
+      consequuntur repudiandae hic dignissimos ea similique. Obcaecati
+      veritatis, ex reprehenderit officia illum odit eligendi voluptas quas
+      praesentium maiores aliquid est itaque ullam alias accusamus magnam
+      quisquam distinctio saepe facilis dolorem cum? Totam, fuga. Corrupti
+      blanditiis quam nemo iure veritatis ipsam repudiandae ducimus doloremque,
+      enim omnis quos aliquam voluptatem velit aliquid nesciunt, officia vel
+      suscipit totam perferendis molestias quis dolorum quisquam nam? Eos optio
+      repellendus excepturi fugit illum laudantium veniam ullam tenetur enim
+      alias, reiciendis voluptatem repudiandae autem sequi doloremque maiores id
+      et a, amet sed eligendi! Praesentium aliquid corporis quasi ratione!
+      Debitis aliquam eligendi velit deserunt cum similique non, nemo veritatis
+      magnam omnis saepe labore ratione hic dolor consectetur aliquid nobis.
+      Nostrum maiores est, laboriosam sequi similique soluta magnam nemo minus
+      quod assumenda qui dignissimos aliquam cum distinctio quidem accusamus
+      accusantium adipisci recusandae unde cumque quas, facilis saepe?
+      Accusantium, quo necessitatibus porro et eligendi quae vel nihil
+      quibusdam, sit cumque possimus fugiat, aut temporibus? Culpa, labore velit
+      ipsam, sunt alias, fugiat laudantium a eaque cupiditate neque deleniti ab
+      commodi nesciunt! Sed culpa hic expedita voluptatibus quisquam? Voluptatem
+      nesciunt cum reprehenderit ducimus. Impedit saepe pariatur delectus, nulla
+      accusantium assumenda quaerat optio? Aliquam enim error sed nulla odio
+      voluptates quibusdam perferendis ullam blanditiis? Eveniet unde ullam
+      fugiat officia, at dignissimos officiis asperiores ea hic iure! Esse minus
+      aliquid placeat odio, debitis iure vitae labore non corporis minima fugiat
+      alias, autem perspiciatis, in sunt. Fugiat, iste! Numquam aut dicta illo
+      eaque animi voluptatem sit, nisi, accusantium beatae dolor, unde cum
+      magnam minima corrupti! Consectetur sunt dolorum tempora asperiores nisi
+      odit suscipit. Quod nobis error similique ducimus, natus commodi expedita
+      voluptatum beatae. Quis aperiam maxime tenetur veritatis voluptatem
+      perspiciatis nemo quia in aspernatur hic qui odio beatae totam magnam
+      odit, rem excepturi! Accusamus corporis, perferendis beatae eius laborum
+      eum amet necessitatibus minus dolores numquam, vero temporibus adipisci,
+      ratione corrupti. Necessitatibus asperiores corrupti sunt voluptates
+      facere voluptatibus nihil, tenetur reprehenderit vitae sit unde reiciendis
+      eius quos atque, harum nulla esse dolorem excepturi nostrum assumenda!
+      Ratione alias eum quibusdam dolorem ipsum sunt sit repellendus quaerat ea
+      magni porro facere vitae amet, fugiat harum eaque. Mollitia sapiente
+      deserunt tempore, nostrum earum accusantium. Nisi eos sapiente dolore
+      atque doloremque ducimus sunt incidunt laboriosam, voluptates molestiae
+      minima ullam quos tempore quidem? Unde, dolores! Ea odit quod, beatae
+      deleniti nemo amet eius reiciendis delectus!
     </section>
   </body>
 </html>
