--- a/HTML CSS/micro-components/OutlineButton/index.html
+++ b/HTML CSS/micro-components/OutlineButton/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Outline Button</title>
+    <title>outline button</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="button-container">
-      <button id="button" type="button">Success</button>
-    </div>
+    <button>Danger</button>
   </body>
 </html>
