changed style & background image. aligend elements

--- a/HTML CSS/Form/index.html
+++ b/HTML CSS/Form/index.html
@@ -9,13 +9,14 @@
   <body>
     <form>
       <label for="first-name">First name:</label><br />
-      <input type="text" id="first-name" name="first-name" /><br />
+      <input type="text" id="first-name" name="first-name" /><br /><br />
       <label for="last-name">Last name:</label><br />
-      <input type="text" id="last-name" name="last-name" /><br />
+      <input type="text" id="last-name" name="last-name" /><br /><br />
       <label for="email"></label>Email:<br />
-      <input type="email" id="email" name="email" /><br />
-      <label for="first-name"></label><br />
-      <input type="submit" /><br />
+      <input type="email" id="email" name="email" /><br /><br />
+      <!-- <input type="checkbox" id="checkbox" name="checkbox" />
+      <label for="checkbox">this form is awesome</label><br /><br /> -->
+      <input type="submit" id="submit-button" value="Submit" /><br />
     </form>
   </body>
 </html>
