--- a/HTML CSS/Form/index.html
+++ b/HTML CSS/Form/index.html
@@ -8,14 +8,34 @@
   </head>
   <body>
     <form>
+      <!-- first name-->
       <label for="first-name">First name:</label><br />
       <input type="text" id="first-name" name="first-name" /><br /><br />
+      <!-- last name-->
       <label for="last-name">Last name:</label><br />
       <input type="text" id="last-name" name="last-name" /><br /><br />
-      <label for="email"></label>Email:<br />
+      <!-- email-->
+      <label for="email">Email:</label><br />
       <input type="email" id="email" name="email" /><br /><br />
-      <!-- <input type="checkbox" id="checkbox" name="checkbox" />
-      <label for="checkbox">this form is awesome</label><br /><br /> -->
+      <!-- radio -->
+      <!-- <label for="radio">How awesome is this form?</label><br /> -->
+      <input type="radio1" id="op1" name="rate" value="awesome" />
+      <label for="radio1"> AWESOME!</label><br />
+      <input type="radio2" id="op2" name="rate" value="meh" />
+      <label for="radio2"> meh</label><br />
+      <input type="radio3" id="op3" name="rate" value="horrible" />
+      <label for="radio3"> horrible</label><br />
+      <!-- checkbox-->
+      <label for="checkbox">How awesome is this form?</label><br />
+      <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike" />
+      <label for="vehicle1"> AWESOME!</label><br />
+      <input type="checkbox" id="vehicle2" name="vehicle2" value="Car" />
+      <label for="vehicle2"> meh</label><br />
+      <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat" />
+      <label for="vehicle3"> horrible</label><br />
+      <!--  -->
+      <!--  -->
+      <!--submit-->
       <input type="submit" id="submit-button" value="Submit" /><br />
     </form>
   </body>
