--- a/HTML CSS/micro-components/TopNavigation/index.html
+++ b/HTML CSS/micro-components/TopNavigation/index.html
@@ -3,202 +3,75 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>top navigation</title>
+    <title>top nav bar</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">News</a>
-      <a href="#">Contact</a>
-      <a href="#">About</a>
+      <ul>
+        <li><a href="#">home</a></li>
+        <li><a href="#">news</a></li>
+        <li><a href="#">contact</a></li>
+        <li><a href="#">about</a></li>
+      </ul>
     </nav>
-    <br />
-    <section>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae distinctio
-      dolorem esse rerum! Aliquid blanditiis aliquam enim debitis iste. Ratione
-      eos necessitatibus, nobis laudantium corrupti nemo totam id exercitationem
-      officiis a dolorem illo adipisci animi commodi quaerat esse ullam. Labore
-      recusandae aperiam nisi consectetur facere at, rem fugiat quasi ad minus
-      nihil tenetur doloribus, eos ipsum molestias? Ut odio sapiente sint
-      aperiam quibusdam ratione animi eaque, maxime esse. Illum, repudiandae
-      cum, sit dolore maiores quidem accusantium, eveniet voluptates accusamus
-      optio delectus sed doloremque nulla! Quisquam voluptate debitis totam
-      assumenda molestias, a odio voluptates nemo ab, blanditiis recusandae
-      modi, dolor fuga sint quos fugiat id eveniet quas. Ipsum quod repellendus,
-      ad molestias aliquid, beatae omnis harum sapiente repudiandae qui amet
-      error architecto. Aperiam quis, corrupti non illum consequuntur
-      consequatur libero inventore ut eligendi nam vero, aliquid error dolor
-      quam, veritatis pariatur ex. Alias eos, nesciunt eligendi dicta
-      perferendis minus libero magnam earum in dolorum vel natus qui dolore
-      tempore? Dolor dignissimos quam exercitationem cumque, fugit ipsum
-      praesentium officia? Id debitis culpa ipsa excepturi delectus molestiae
-      voluptatibus architecto expedita, hic rerum voluptates doloremque quam
-      iste. Consequatur ullam aliquid consequuntur magnam at id deserunt beatae
-      fuga ex animi, labore optio! Corrupti, fugiat! Ea!lor Lorem ipsum dolor
-      sit amet consectetur adipisicing elit. Possimus nemo ab corrupti ad unde
-      voluptate ipsum. Ea dolor nemo vero suscipit, voluptatem hic delectus
-      nostrum ab placeat aperiam architecto in tempora soluta doloremque
-      exercitationem beatae perspiciatis inventore corrupti tempore illum
-      voluptate ullam officia? Eum minima odit repellat consequatur, mollitia
-      quia. Accusamus possimus eius quos ex quasi debitis voluptates, enim ab
-      facere cupiditate nemo commodi, exercitationem corporis architecto odit!
-      Omnis ex consectetur fugiat ratione asperiores molestiae beatae, ad modi
-      eos vitae neque animi ducimus exercitationem expedita quos maiores
-      obcaecati, unde quas? Sapiente dolorem eveniet nulla dolore doloribus modi
-      atque quo expedita porro autem iusto repellendus exercitationem sequi
-      voluptatibus, aut delectus debitis, ab quam. Id veniam earum amet eum
-      voluptate quia reiciendis dolorem aperiam distinctio quos accusantium quas
-      beatae odit, sunt assumenda numquam explicabo alias enim, totam suscipit
-      maxime minima cupiditate? Odio deleniti officia nam porro doloribus
-      aliquam? Saepe quam vel fugit praesentium, vero alias eos nam quos? Quia
-      cum autem praesentium quidem in nam quos, officiis et minus maxime
-      architecto esse eius! Debitis maxime, ex aperiam deserunt unde, commodi
-      officia minima distinctio pariatur accusantium itaque. Ipsa soluta quod
-      vel repellat laudantium ex. Modi commodi doloremque fuga natus sapiente
-      optio quas nulla alias ipsum nam atque, placeat in rem delectus qui
-      officia aut et earum, excepturi iure tenetur. Earum optio labore culpa
-      vitae deserunt possimus omnis saepe, non rerum officia perspiciatis
-      reprehenderit consequatur maxime fuga maiores voluptates in deleniti
-      repellat similique! Atque mollitia beatae non nobis rem obcaecati?
-      Laudantium culpa asperiores exercitationem magnam at, in temporibus eius
-      provident beatae. Quia voluptas hic facere quos numquam maiores quaerat
-      non ipsam odit repellat atque id, eius modi? Nam at in dignissimos
-      expedita modi quos facilis eaque quasi delectus. Porro esse cupiditate rem
-      assumenda, ipsam sapiente consequuntur ullam dignissimos, doloremque
-      voluptas quaerat ducimus corrupti et autem tenetur suscipit officia?
-      Quibusdam modi quaerat quas? Aliquid, odit sit laborum corrupti illo
-      mollitia, in perspiciatis tempore sequi officia itaque magni aspernatur
-      voluptates velit nihil quis esse suscipit quibusdam, ut atque. Sed totam
-      autem ut atque fuga et nisi dolor impedit assumenda odit architecto modi
-      eius possimus dolore quos veritatis alias quae corporis sapiente ratione
-      aut asperiores, non, molestias enim. Consequatur, vero. Beatae inventore
-      cupiditate tenetur architecto, iure sequi alias asperiores deleniti quas
-      voluptate expedita? Quidem aut iusto fugit inventore dolores impedit
-      quibusdam delectus velit, expedita placeat fuga. Similique, officiis?
-      Culpa necessitatibus officiis consectetur laboriosam veniam aut doloribus
-      magni porro! Autem dolore voluptates qui laborum quasi, porro,
-      exercitationem consectetur nostrum amet tempora quis veritatis sint, optio
-      iusto! Necessitatibus nisi et, numquam qui consectetur vitae doloremque
-      quidem perspiciatis porro, omnis corrupti voluptatibus accusantium
-      eveniet, deleniti quae esse iusto! Atque laboriosam qui optio itaque quo
-      veniam quam non nemo possimus nisi minima voluptate in tenetur laudantium
-      unde, quis repellendus quibusdam repellat deserunt magni cupiditate quia!
-      Assumenda consequuntur modi quae officiis totam, nisi optio excepturi
-      numquam sed quaerat tempore nobis nesciunt maiores et veritatis laudantium
-      corrupti. Non, odio, id doloremque laborum a modi, quas ducimus voluptas
-      eveniet exercitationem quisquam culpa praesentium facere? Lorem ipsum
-      dolor sit amet consectetur adipisicing elit. Veritatis, aliquid! Saepe,
-      pariatur dolorem repellat voluptatibus ea impedit animi eius. Expedita
-      exercitationem minus voluptatem ullam sed et repellendus non ex doloribus!
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
-      necessitatibus porro tempore! Asperiores, voluptate autem, obcaecati
-      placeat beatae perspiciatis itaque quibusdam mollitia impedit provident
-      illum repellat nobis quos saepe repudiandae reiciendis sequi tempore
-      veniam neque! Et aliquid, expedita repudiandae officiis dolorum
-      consequatur similique! Sequi tempore, maiores quasi exercitationem,
-      eligendi quae aspernatur molestiae ex sit tenetur error, nisi similique
-      sint quod recusandae ad corporis nemo ipsa dolore voluptate? Accusantium
-      vitae explicabo fugit delectus nobis eum, illum itaque, fugiat ad
-      laboriosam impedit consectetur labore, debitis commodi dolores neque nam
-      repudiandae. Fugit culpa neque nisi accusamus accusantium, voluptate
-      voluptatibus quibusdam sunt architecto eos facere provident, vero iure
-      officia corrupti numquam ab distinctio, molestias maxime. Aliquam laborum,
-      eaque saepe nemo ratione unde dolor. Vero velit, expedita a eaque debitis
-      dolor distinctio excepturi odit nostrum quos, reiciendis consequuntur enim
-      ducimus sapiente. Suscipit accusamus ipsum officiis quo iusto! Cupiditate
-      sint eum in numquam placeat, pariatur exercitationem id illum
-      reprehenderit hic nulla necessitatibus! Odit, eligendi quae laboriosam hic
-      molestias quos corrupti unde numquam quis aliquam sequi repudiandae ipsam
-      aperiam dicta temporibus perferendis sint consequuntur sit sunt quod
-      voluptatem optio beatae? Voluptas alias vel quibusdam iste aspernatur
-      ipsum nemo fugiat voluptatum molestiae fuga? Vel, optio ex eum iste fugiat
-      eos unde eaque voluptas dolor ipsam esse totam iure repudiandae recusandae
-      ut quod voluptatum nihil expedita enim laboriosam ab excepturi soluta
-      eveniet? Cum deleniti, quas reiciendis dicta rerum commodi facilis
-      voluptatibus illum modi ad quae facere molestias nostrum odio sed quis
-      laboriosam odit. Dicta placeat accusantium sit! Accusamus, quisquam
-      assumenda! Saepe, amet. Labore aliquam corporis deserunt optio fugiat
-      numquam aliquid possimus consectetur. Esse, quo eaque! Excepturi
-      reprehenderit modi necessitatibus itaque magnam odit, unde qui ab
-      repudiandae similique ducimus soluta aspernatur minus dicta deleniti
-      voluptatem perspiciatis tenetur nesciunt voluptas deserunt obcaecati
-      voluptatibus! Architecto magnam, eveniet quos magni unde modi quis
-      voluptates saepe dignissimos eius officiis error porro? Earum numquam quia
-      ipsam sapiente dolore, tempora repellendus eaque nihil error libero
-      aliquam modi minima inventore exercitationem quibusdam dignissimos sunt
-      dicta molestias! Illo quasi dolorem nulla officia, commodi eaque beatae,
-      provident aut distinctio nobis nam? Accusamus, amet veritatis. Est unde
-      dolor illo nesciunt qui laudantium quis facilis repellendus libero porro
-      nihil, perspiciatis perferendis, consectetur ipsam odio possimus quidem
-      explicabo debitis incidunt, impedit beatae adipisci et voluptatum
-      voluptate! Velit doloremque quo vero, quod, veritatis a iste totam maxime
-      quae tempora porro, id ea nemo natus unde modi rerum asperiores possimus
-      atque. Doloribus expedita sed dolorem, facere veniam earum esse non
-      inventore! Obcaecati ea aliquid dolores, voluptatum temporibus odit quod,
-      placeat aut ad itaque deleniti officia sint dicta qui velit pariatur nihil
-      autem dolor sequi labore. Repellendus alias optio rem hic ut possimus
-      reprehenderit sed quam ipsa error maxime consequatur voluptatibus
-      consectetur sunt vitae assumenda veritatis tempore explicabo neque
-      debitis, illum deleniti voluptates, odio voluptatem! Fugit maiores maxime
-      id qui numquam harum doloremque modi iure. Corporis possimus enim,
-      sapiente sed fugit, dolorem quasi labore magnam molestiae aperiam
-      veritatis animi provident sint ad alias cumque, odit totam. Deserunt
-      laborum molestias, officiis esse unde minima obcaecati at sapiente
-      deleniti modi minus possimus exercitationem, ut eligendi excepturi
-      voluptates nihil dolorum harum cupiditate et tenetur voluptate
-      necessitatibus accusamus! Sit officiis quod pariatur voluptatem
-      voluptatibus minima distinctio qui, perspiciatis laborum, a incidunt
-      numquam? Dolore nihil quis enim eveniet, odio soluta aliquid, possimus
-      laudantium odit perspiciatis tenetur cupiditate esse dolorum? Amet,
-      eveniet, sint aliquid soluta natus dolor dolorem eius ab debitis pariatur
-      sequi cum. Quae ullam alias quis quasi asperiores consequuntur. Est
-      tempore blanditiis voluptatum nesciunt ad, nam laboriosam obcaecati
-      dignissimos libero dolorem sit neque, possimus ratione cupiditate
-      assumenda porro cum maxime quod repellendus nemo, minima quisquam expedita
-      quo quis. Nesciunt voluptatem commodi ratione et, nemo neque molestias
-      exercitationem facilis doloremque maxime officia eum quam beatae ab omnis
-      minus dolor consequuntur distinctio? Ullam impedit vel consequuntur,
-      obcaecati nihil ex facere natus! Minima iste non nesciunt maiores dolor,
-      beatae laboriosam unde nostrum cum error, magnam temporibus ea quas
-      possimus optio iure enim sapiente. Quos unde autem aspernatur eveniet
-      impedit labore possimus culpa molestiae? Molestias, quis. Optio, expedita
-      beatae quidem nobis placeat saepe sunt asperiores dolor officiis
-      voluptatum temporibus distinctio veritatis eos quia provident deleniti
-      labore sequi, aut ullam odio cupiditate reiciendis repudiandae. Optio a
-      voluptates repellat distinctio quae soluta accusamus dignissimos
-      cupiditate porro, nostrum accusantium molestias, consequuntur saepe minima
-      commodi corporis, voluptas amet adipisci eos ex libero esse maxime.
-      Mollitia animi, eos, nobis debitis laboriosam saepe porro autem dolore
-      neque provident ipsa similique enim optio magnam sunt unde fuga quibusdam
-      omnis magni quam officiis. Voluptate commodi consequatur, dolores sint
-      iusto a labore nobis explicabo tempore sapiente sed iste impedit ab rerum
-      distinctio expedita non culpa id facere deleniti. Consequuntur, omnis
-      reiciendis autem commodi sequi, iste, quod quisquam neque quos delectus
-      ratione obcaecati nulla nobis perferendis dicta. Quisquam tenetur earum
-      dolorum blanditiis ipsum, expedita similique eveniet assumenda nesciunt
-      neque amet repellendus eius quae accusantium non voluptatibus vero. Fugit
-      distinctio nemo eius repellendus itaque veniam vero possimus harum
-      nesciunt, ullam quasi ducimus. Sint asperiores laborum vitae et explicabo
-      quae omnis dolorum illo mollitia dolor assumenda voluptatum, nobis
-      reiciendis inventore vero obcaecati unde nostrum esse quod cum laboriosam
-      velit totam consequuntur. Libero, optio nobis? Similique numquam commodi
-      magnam perspiciatis repellendus quo placeat reprehenderit! Delectus ipsa,
-      exercitationem non perferendis blanditiis quibusdam nostrum eveniet
-      recusandae, laudantium facilis saepe optio sit veniam rerum culpa quod
-      quam? Culpa atque dolor nulla soluta adipisci iure ea et eius est
-      voluptatem, quam animi nemo! Dolore numquam maxime quasi minus ipsam ullam
-      fuga autem earum? Doloremque, deserunt pariatur blanditiis cumque
-      consectetur obcaecati ad amet fugiat vel maiores nesciunt debitis
-      excepturi hic odio impedit temporibus libero dignissimos ducimus rerum
-      reiciendis laborum. Laborum eius quisquam porro quo, tempore quaerat!
-      Soluta alias atque rem sequi pariatur consequuntur, quae molestiae totam
-      expedita, magnam facilis, deleniti id eos! Cupiditate, voluptatibus quis
-      veritatis unde, id accusamus ea ratione natus ex sunt tempore aut dolor
-      earum accusantium. Veritatis officia, delectus atque similique
-      consequuntur odit repellat numquam cupiditate voluptatem eum quibusdam non
-      modi sunt aliquam sequi dolorem culpa, eos nam quis exercitationem
-      accusamus suscipit fugit nisi illo. Repudiandae, vel quod?
+    <section id="maini">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro deserunt
+      voluptatibus animi incidunt quasi explicabo rem laboriosam cupiditate
+      reiciendis sequi soluta, ipsam, libero facilis eaque eveniet rerum maiores
+      minus, minima recusandae accusantium dolor. Assumenda et nemo esse
+      laudantium ratione explicabo dolorum at unde error optio aspernatur veniam
+      reprehenderit, dolore dignissimos! Ad quibusdam nulla doloremque facilis
+      perspiciatis sequi corrupti magni atque voluptates at, asperiores,
+      voluptas laboriosam distinctio quae laudantium nemo ea fuga nostrum?
+      Voluptatum dolor natus voluptate reiciendis labore. Nobis animi inventore
+      quas accusantium neque? Placeat perspiciatis minima, illum eaque
+      laboriosam consequatur eligendi. Dicta sapiente voluptates delectus
+      debitis ex provident voluptatem doloremque iusto quos quibusdam, accusamus
+      porro odio commodi, eum assumenda. Expedita libero sapiente adipisci
+      ducimus delectus doloribus repellat illo voluptatibus est hic minus
+      reprehenderit quos praesentium tempore vel eum molestias quod natus,
+      labore voluptate numquam sed, facilis provident reiciendis. Nisi
+      reiciendis neque sed distinctio nostrum, ratione eius quam quasi debitis
+      repudiandae. Quis veritatis distinctio quisquam porro dolores sapiente
+      harum, totam aspernatur temporibus accusamus minus asperiores, natus
+      repellendus rerum rem esse facilis fugiat doloremque aliquid error
+      corporis tempore modi! Sint vero magni maxime accusantium rerum!
+      Asperiores voluptatem doloribus, quisquam modi nesciunt debitis mollitia
+      autem atque, pariatur saepe eum unde tenetur delectus! Sed consequuntur
+      dolore, tenetur dolorem quos pariatur neque tempore possimus optio.
+      Consequatur quod deserunt exercitationem quasi voluptas quam perferendis
+      quos voluptate unde recusandae praesentium, numquam veritatis, quo optio
+      fuga saepe corporis sit, eligendi ducimus cupiditate consequuntur nostrum.
+      Deleniti, omnis excepturi? Eum aliquam voluptate minima quibusdam est ex
+      minus ullam ad nostrum reiciendis, corrupti esse perferendis asperiores
+      sint omnis laboriosam at aspernatur consectetur quos! Sunt magni
+      recusandae animi, est ipsa ut nisi delectus! Tempora et doloribus incidunt
+      impedit animi, natus qui in quibusdam voluptatibus. Corrupti ea delectus
+      veritatis laudantium sunt placeat nulla accusamus ullam in hic, beatae
+      nemo numquam minus ex facere, tenetur aspernatur eos impedit suscipit amet
+      fuga sed voluptas ab tempora? Possimus quisquam qui molestias enim nihil
+      modi delectus distinctio omnis voluptatem corporis perferendis sequi
+      commodi consequuntur non recusandae impedit rerum, consectetur sed nulla
+      explicabo saepe numquam quam! Et, ullam accusantium reprehenderit
+      accusamus natus distinctio? Officia quae, nostrum maiores magni harum non.
+      Repellat tempore pariatur aut velit, doloremque reiciendis aliquid
+      voluptatibus rem unde minima temporibus sunt dolorem distinctio quidem
+      iusto ipsum. Possimus sapiente unde a aliquid consequuntur. Quia ullam
+      nesciunt sint ut! Doloremque consequatur sit voluptatum! Quisquam fuga
+      nisi accusantium odit nesciunt libero sint. Perspiciatis minus
+      reprehenderit excepturi. Totam eveniet minima id dolore quis adipisci
+      voluptate asperiores temporibus perferendis incidunt. Soluta blanditiis
+      autem rerum. Quae, eos quod, quisquam dolor commodi beatae inventore
+      aspernatur nisi voluptatibus numquam iure perferendis consequuntur vitae
+      minus est velit eaque error provident quam a, dignissimos voluptates.
+      Itaque perferendis vitae commodi ut ullam dolorem qui porro laudantium,
+      asperiores a rem quidem dolorum earum ipsa similique repellat possimus
+      unde eos assumenda fugiat beatae magni illo harum quae. Quisquam, fuga
+      exercitationem. Perferendis magnam illo harum placeat, tempore porro
+      adipisci esse consequatur dolore, laudantium blanditiis facilis?
+      Cupiditate assumenda impedit doloribus deserunt mollitia, eveniet expedita
+      non excepturi, neque harum quidem.
     </section>
   </body>
 </html>
