--- a/HTML CSS/Form/index.html
+++ b/HTML CSS/Form/index.html
@@ -43,7 +43,7 @@
       <label for="color"> the color</label><br />
       <input type="checkbox" id="design" name="design" value="design" />
       <label for="design"> the design</label><br /><br />
-      <!--  -->
+      <!-- select -->
       <label for="rate">Please rate this form from 1 to 5</label><br />
       <select id="rate" name="rate">
         <option value="1">1</option>
@@ -53,7 +53,6 @@
         <option value="5">5</option></select
       ><br />
       <br />
-      <!--  -->
       <!--submit-->
       <input type="submit" id="submit-button" value="Submit" /><br />
     </form>
