--- a/HTML CSS/Video Background Site/index.html
+++ b/HTML CSS/Video Background Site/index.html
@@ -8,12 +8,33 @@
   </head>
   <body>
     <video
-      src="The Witcher 3_ Wild Hunt Trailer.mp4"
+      src="typing.mp4"
       type="video/mp4"
       autoplay="true"
+      muted="true"
       loop="true"
-    >
-      >
-    </video>
+    ></video>
+    <section>
+      <h1>Computer keyboard</h1>
+      A computer keyboard is a typewriter-style device[1] which uses an
+      arrangement of buttons or keys to act as mechanical levers or electronic
+      switches. Replacing early punched cards and paper tape technology,
+      interaction via teleprinter-style keyboards have been the main input
+      method for computers since the 1970s, supplemented by the computer mouse
+      since the 1980s. Keyboard keys (buttons) typically have a set of
+      characters engraved or printed on them, and each press of a key typically
+      corresponds to a single written symbol. However, producing some symbols
+      may require pressing and holding several keys simultaneously or in
+      sequence.[2] While most keyboard keys produce letters, numbers or symbols
+      (characters), other keys or simultaneous key presses can prompt the
+      computer to execute system commands, such as such as the
+      Control-Alt-Delete combination used with Microsoft Windows.[3][4] In a
+      modern computer, the interpretation of key presses is generally left to
+      the software: the information sent to the computer, the scan code, tells
+      it only which key (or keys) on which row and column, was pressed or
+      released.[5] In normal usage, the keyboard is used as a text entry
+      interface for typing text, numbers, and symbols into application software
+      such as a word processor, web browser or social media app.
+    </section>
   </body>
 </html>
