--- a/HTML CSS/Google Homepage/index.html
+++ b/HTML CSS/Google Homepage/index.html
@@ -8,16 +8,23 @@
   </head>
   <body>
     <nav>
-      <ul>
+      <ul id="nav-bar">
         <li>Gmail</li>
         <li>Images</li>
-        <li></li>
-        <li></li>
+        <li><input type="image" src="menu.svg" /></li>
+        <li><input type="image" src="user.png" /></li>
       </ul>
     </nav>
-    <div><img src="logo.png" /></div>
-    <div></div>
-    <div></div>
-    <footer></footer>
+    <div id="logo"><img src="logo.png" /></div>
+    <div id="search-bar"><input type="text" placeholder="" /></div>
+    <div>
+      <input type="button" value="Google Search" /><input
+        type="button"
+        value="i'm Feeling Lucky"
+      />
+    </div>
+    <footer>
+      Privacy Terms Settings Advertising Business About How Search works
+    </footer>
   </body>
 </html>
