--- a/HTML CSS/Google Homepage/index.html
+++ b/HTML CSS/Google Homepage/index.html
@@ -8,21 +8,21 @@
   </head>
   <body>
     <nav>
-      <ul id="nav-bar">
-        <li>Gmail</li>
-        <li>Images</li>
-        <li><input type="image" src="menu.svg" /></li>
-        <li><input type="image" src="user.png" /></li>
-      </ul>
+      <a href="">Gmail</a>
+      <a href="">Images</a>
+      <input type="image" src="menu.svg" height="17vh" width="17vw" src="#" />
+      <input type="image" src="user.png" height="18vh" width="18vw" src="#" />
     </nav>
+    <br />
     <div id="logo"><img src="logo.png" /></div>
+    <br />
     <div id="search-bar"><input type="text" placeholder="" /></div>
-    <div>
-      <input type="button" value="Google Search" /><input
-        type="button"
-        value="i'm Feeling Lucky"
-      />
+    <br />
+    <div id="buttons">
+      <input type="button" value="Google Search" />
+      <input type="button" value="i'm Feeling Lucky" />
     </div>
+    <br />
     <footer>
       Privacy Terms Settings Advertising Business About How Search works
     </footer>
