finished most of positoning, searchbar changes

--- a/HTML CSS/Google Homepage/index.html
+++ b/HTML CSS/Google Homepage/index.html
@@ -19,8 +19,8 @@
     <div id="search-bar"><input type="text" placeholder="" /></div>
     <br />
     <div id="buttons">
-      <input type="button" value="Google Search" />
-      <input type="button" value="i'm Feeling Lucky" />
+      <button class="search-button">Google Search</button>
+      <button class="search-button">i'm Feeling Lucky</button>
     </div>
     <br />
     <footer>
